--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <div>
     <h1>Bioinformatics HomeWork 08</h1>
-    <h2>contants</h2>
+    <h2>Can I add stuff here?</h2>
     <img src="https://ben-shao-lizardhead.github.io/FirstWebPage/image/p02pwkbd.jpg" alt="contants">
   </div>
 </body>
