--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div>
     <h1>Bioinformatics HomeWork 08</h1>
     <h2>Can I add stuff here?</h2>
-    <img src="https://ben-shao-lizardhead.github.io/FirstWebPage/image/p02pwkbd.jpg" alt="contants">
+    <img src="https://ben-shao-lizardhead.github.io/FirstWebPage/image/p02pwkbd.jpg">
   </div>
 </body>
 </html>
