--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 </head>
 <body>
   <div>
-    <h1>Bioinformatics HomeWork 08</h1>
+    <h1>Bioinformatics Homework 08</h1>
     <h2>Can I add stuff here?</h2>
+    <p>Or should I try here?</p>
     <img src="https://ben-shao-lizardhead.github.io/FirstWebPage/image/p02pwkbd.jpg">
   </div>
 </body>
