--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Ramos MD</title>
+  <title>Yucheng First Webpage</title>
   <link rel="stylesheet" href="https://ben-shao-lizardhead.github.io/FirstWebPage/styles.FirstWebPage">
   <style>
     img {
@@ -16,8 +16,18 @@
 <body>
   <div>
     <h1>Bioinformatics Homework 08</h1>
-    <h2>Can I add stuff here?</h2>
-    <p>Or should I try here?</p>
+    <h2>This is my first webpage. Happy.</h2>
+    <hr />
+    <p>I am Yucheng Shao. Please call me Ben.</p>
+    <p>I am generally interested in any application of math in biology.</p>
+    <p>I am looking for a grad school.</p>
+    <hr />
+    <p>The projects for the bioinformatic class I am taking focus on the p450 protein family.</p>
+    <p>It is responsible for hydrolyzing organic chemical and is found in a large range of organisms.</p>
+    <hr />
+    <p>I was told that I cannot put links onto this webpage (through GitHub).</p>
+    <p>Is that so? I found the coding for html kind of fun.</p>
+    <p>Below is one of my favorite lizard. :)</p>
     <img src="https://ben-shao-lizardhead.github.io/FirstWebPage/image/p02pwkbd.jpg">
   </div>
 </body>
