--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
     <p>Is that so? I found the coding for html kind of fun.</p>
     <p>Below is one of my favorite lizard. :)</p>
     <img src="https://ben-shao-lizardhead.github.io/FirstWebPage/image/p02pwkbd.jpg">
+    <hr />
+    <p>Special thanks for the following videos:</p>
+    <p>https://www.youtube.com/watch?v=bWPMSSsVdPk</p>
+    <p>https://www.youtube.com/watch?v=fayd6VWdzmU</p>
   </div>
 </body>
 </html>
