--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <hr />
     <p>I was told that I cannot put links onto this webpage (through GitHub).</p>
     <p>Is that so? I found the coding for html kind of fun.</p>
-    <p>Below is one of my favorite lizard. :)</p>
+    <p>Below is one of my favorite lizards. :)</p>
     <img src="https://ben-shao-lizardhead.github.io/FirstWebPage/image/p02pwkbd.jpg">
     <hr />
     <p>Special thanks for the following videos:</p>
